--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,8 +74,8 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ec2-user
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "./"  # Pasta do projeto
-          target: "/home/ec2-user/app"  # Local na EC2
+          source: "./"  
+          target: "/home/ec2-user/app"  
 
       # Conectar via SSH e rodar o Docker Compose na EC2
       - name: SSH into EC2 and run Docker Compose
