--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  
-      
+
       # Configurar o Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -67,18 +67,28 @@ jobs:
       - name: Build the project
         run: npm run build  # Cria o build da aplicação (Vite gera na pasta dist/)
 
-      # Transferir arquivos para a EC2 via SSH
+      # SSH para limpar o diretório de destino manualmente
+      - name: SSH into EC2 and clean the target folder
+        uses: appleboy/ssh-action@v0.1.5
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ec2-user
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            sudo rm -rf /home/ec2-user/app/*  # Remove todos os arquivos no diretório
+            sudo mkdir -p /home/ec2-user/app  # Cria o diretório se não existir
+      
+      # Transferir arquivos para a EC2 via SCP
       - name: Transfer files to EC2
         uses: appleboy/scp-action@v0.1.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ec2-user
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "./"  
-          target: "/home/ec2-user/app"  
-          rm: true  # Teste de remover arquivos locais 
+          source: "./"  # Diretório de origem
+          target: "/home/ec2-user/app"  # Diretório de destino na EC2
 
-      
+      # Ajustar permissões e rodar Docker Compose na EC2
       - name: SSH into EC2 and run Docker Compose
         uses: appleboy/ssh-action@v0.1.5
         with:
@@ -86,6 +96,8 @@ jobs:
           username: ec2-user
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
+            sudo chown -R ec2-user:ec2-user /home/ec2-user/app
             cd /home/ec2-user/app
-            docker-compose down  # Para containers existentes, se houver
-            docker-compose up --build -d  # Para subir os containers com Docker Compose
+            docker-compose down  # Parar containers existentes
+            docker-compose build  # Rebuildar os containers com o código novo
+            docker-compose up -d  # Subir os containers em modo detached
