--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,10 +56,9 @@ jobs:
         with:
           node-version: '18'
 
-      # Gerar o arquivo .env a partir dos secrets
       - name: Set environment variables from GitHub Secrets
         run: |
-          echo "DB_HOST=${{ secrets.DB_HOST }}" > .env
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
           echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
           echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> .env
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
@@ -84,14 +83,13 @@ jobs:
             sudo rm -rf /home/ec2-user/app/*  
             sudo mkdir -p /home/ec2-user/app  
 
-      # Transferir arquivos e o arquivo .env para a EC2
       - name: Transfer files to EC2
         uses: appleboy/scp-action@v0.1.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ec2-user
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "./dist/ .env"  # Incluindo o .env na transferência
+          source: "./"  
           target: "/home/ec2-user/app"  
 
       - name: SSH into EC2 and run Docker Compose
@@ -105,4 +103,4 @@ jobs:
             cd /home/ec2-user/app
             docker-compose down  
             docker-compose build  
-            docker-compose up -d
+            docker-compose up -d  
