--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-# Ambiente LOCAL (MySQL)
-# DB_HOST=localhost
+#matenha o host caso der algum problema com xamp se usar /ip do banco
+# DB_HOST=host.docker.internal
 # DB_PORT=3306
-# DB_USERNAME=admin
+# DB_USERNAME=root
 # DB_PASSWORD=
-# DB_NAME=dbdesafiobemol
+# DB_NAME=ominibanco
