docs: :memo: ajuste de readm
ajuste de readm

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-#matenha o host caso der algum problema com xamp se usar /ip do banco
+#matenha o host caso der algum problema com xamp se usar /ip do banco.
 # DB_HOST=host.docker.internal
 # DB_PORT=3306
 # DB_USERNAME=root
